Réalisation de la partie Paris bellville et du bouton

--- a/index.html
+++ b/index.html
@@ -3,16 +3,43 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<script src="https://kit.fontawesome.com/671bf4c372.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="css/tablet-booki.css" media=" screen and (max-width: 992px)" />
 	<link rel="stylesheet" type="text/css" href="css/smartphone-booki.css" media=" screen and (max-width: 768px)" /> 
 	<title>Ohmyfood</title>
 </head>
 <body>
+
+					<!-- header -->
+
 	<header>
 		<h1>Ohmyfood</h1>
 	</header>
 	
 
+					<!-- partie main -->
+
+	<main>
+
+					<!-- paris belleville -->
+
+		<div class="belleville">
+			<i class="fa-solid fa-location-dot"></i>
+			<h2>Paris Belleville</h2>
+		</div>
+
+		<section class="explore">
+			<h2>
+				Réservez le menu qui<br> vous convient
+			</h2>
+			<p>
+				Découvrez des restaurants d'exception sélectionnés par nos soins
+			</p>
+			<button>
+				explore nos restaurants
+			</button>
+		</section>
+	</main>
 </body>
 </html>
