Réalisation de la partie fontionnement

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="https://kit.fontawesome.com/671bf4c372.js" crossorigin="anonymous"></script>
-	<link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
-	<link rel="stylesheet" type="text/css" href="css/tablet-booki.css" media=" screen and (max-width: 992px)" />
-	<link rel="stylesheet" type="text/css" href="css/smartphone-booki.css" media=" screen and (max-width: 768px)" /> 
+	<link rel="stylesheet" type="text/css" href="css/style.css" media="screen">
+	<link rel="stylesheet" type="text/css" href="css/tablet-booki.css" media=" screen and (max-width: 992px)">
+	<link rel="stylesheet" type="text/css" href="css/smartphone-booki.css" media=" screen and (max-width: 768px)"> 
 	<title>Ohmyfood</title>
 </head>
 <body>
@@ -39,6 +39,30 @@
 			<button>
 				explore nos restaurants
 			</button>
+		</section>
+
+				<!-- partie fonctionnement -->
+
+
+		<section class="info">
+			<h2>Fonctionnement</h2>
+			<ol>
+				<li>
+					<span>1</span>
+					<i class="fa-solid fa-mobile-screen"></i>
+					Choisissez un restaurant
+				</li>
+				<li>
+					<span>2</span>
+					<i class="fa-solid fa-list-ul"></i>
+					Composez votre menu
+				</li>
+				<li>
+					<span>3</span>
+					<i class="fa-solid fa-store"></i>
+					Dégustez au restaurant
+				</li>
+			</ol>
 		</section>
 	</main>
 </body>
