--- a/index.html
+++ b/index.html
@@ -64,6 +64,46 @@
 				</li>
 			</ol>
 		</section>
+
+				<!-- partie restaurant -->
+
+		<section class="restau">
+			<h2>Restaurants</h2>
+			<article class="cart">
+				<img src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="table de restaurant">
+				<h3>La palette du goût</h3>
+				<span class="mention-jaim">
+					<i class="fa-regular fa-heart"></i>
+				</span>
+				<span class="nouveau-menu">Nouveau</span>
+				<p>Ménilmontant</p>
+			</article>
+			<article class="cart">
+				<img src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="table de restaurant">
+				<h3>La note enchantée</h3>
+				<span class="mention-jaim">
+					<i class="fa-regular fa-heart"></i>
+				</span>
+				<span class="nouveau-menu">Nouveau</span>
+				<p>Charonne</p>
+			</article>
+			<article class="cart">
+				<img src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="table de restaurant">
+				<h3>À la française</h3>
+				<span class="mention-jaim">
+					<i class="fa-regular fa-heart"></i>
+				</span>
+				<p>Cité Rouge</p>
+			</article>
+			<article class="cart">
+				<img src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="table de restaurant">
+				<h3>Le délice des sens</h3>
+				<span class="mention-jaim">
+					<i class="fa-regular fa-heart"></i>
+				</span>
+				<p>Folie-Méricourt</p>
+			</article>
+		</section>
 	</main>
 </body>
 </html>
