Fin de réalisation de la partie restaurant et du footer

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				Découvrez des restaurants d'exception sélectionnés par nos soins
 			</p>
 			<button>
-				explore nos restaurants
+				explorer nos restaurants
 			</button>
 		</section>
 
@@ -72,38 +72,54 @@
 			<article class="cart">
 				<img src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="table de restaurant">
 				<h3>La palette du goût</h3>
-				<span class="mention-jaim">
-					<i class="fa-regular fa-heart"></i>
-				</span>
+				<i class="fa-regular fa-heart"></i>
+				<i class="fa-solid fa-heart"></i>
 				<span class="nouveau-menu">Nouveau</span>
 				<p>Ménilmontant</p>
 			</article>
 			<article class="cart">
 				<img src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="table de restaurant">
 				<h3>La note enchantée</h3>
-				<span class="mention-jaim">
-					<i class="fa-regular fa-heart"></i>
-				</span>
+				<i class="fa-regular fa-heart"></i>
+				<i class="fa-solid fa-heart"></i>
 				<span class="nouveau-menu">Nouveau</span>
 				<p>Charonne</p>
 			</article>
 			<article class="cart">
 				<img src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="table de restaurant">
 				<h3>À la française</h3>
-				<span class="mention-jaim">
-					<i class="fa-regular fa-heart"></i>
-				</span>
+				<i class="fa-regular fa-heart"></i>
+				<i class="fa-solid fa-heart"></i>
 				<p>Cité Rouge</p>
 			</article>
 			<article class="cart">
 				<img src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="table de restaurant">
 				<h3>Le délice des sens</h3>
-				<span class="mention-jaim">
-					<i class="fa-regular fa-heart"></i>
-				</span>
+				<i class="fa-regular fa-heart"></i>
+				<i class="fa-solid fa-heart"></i>
 				<p>Folie-Méricourt</p>
 			</article>
 		</section>
 	</main>
+
+
+				<!-- footer -->
+
+	
+	<footer>
+		<h2>Ohmyfood</h2>
+			
+		<p>
+			<i class="fa-solid fa-utensils"></i>
+			Proposer un restaurant
+		</p>
+			
+		<p>
+			<i class="fa-solid fa-handshake"></i>
+			Devenir partenaire
+		</p>
+		<p>Mention légales</p>
+		<p>Contact</p>
+	</footer>			
 </body>
 </html>
