Réalisation de la partie responsive, de la page accueil, sur la vertion tablette

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="https://kit.fontawesome.com/671bf4c372.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" type="text/css" href="css/style.css" media="screen">
-	<link rel="stylesheet" type="text/css" href="css/tablet-booki.css" media=" screen and (max-width: 992px)">
-	<link rel="stylesheet" type="text/css" href="css/smartphone-booki.css" media=" screen and (max-width: 768px)"> 
+	<link rel="stylesheet" type="text/css" href="css/tablet.css" media=" screen and (max-width: 971px)">
+	<link rel="stylesheet" type="text/css" href="css/smartphone.css" media=" screen and (max-width: 768px)"> 
 	<title>Ohmyfood</title>
 </head>
 <body>
