Ajout des liens hypertexte sur la page d'accueil et quelque maudification sur le fichier style.css

--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
 			<p>
 				Découvrez des restaurants d'exception sélectionnés par nos soins
 			</p>
-			<button>
-				explorer nos restaurants
-			</button>
+			<a href="#">
+				<button>
+					explorer nos restaurants
+				</button>
+			</a>
 		</section>
 
 				<!-- partie fonctionnement -->
@@ -47,21 +49,27 @@
 		<section class="info">
 			<h2>Fonctionnement</h2>
 			<ol>
-				<li>
-					<span>1</span>
-					<i class="fa-solid fa-mobile-screen"></i>
-					Choisissez un restaurant
-				</li>
-				<li>
-					<span>2</span>
-					<i class="fa-solid fa-list-ul"></i>
-					Composez votre menu
-				</li>
-				<li>
-					<span>3</span>
-					<i class="fa-solid fa-store"></i>
-					Dégustez au restaurant
-				</li>
+				<a href="#">
+					<li>
+						<span>1</span>
+						<i class="fa-solid fa-mobile-screen"></i>
+						Choisissez un restaurant
+					</li>
+				</a>
+				<a href="#">
+					<li>
+						<span>2</span>
+						<i class="fa-solid fa-list-ul"></i>
+						Composez votre menu
+					</li>
+				</a>
+				<a href="#">
+					<li>
+						<span>3</span>
+						<i class="fa-solid fa-store"></i>
+						Dégustez au restaurant
+					</li>
+				</a>
 			</ol>
 		</section>
 
@@ -70,34 +78,42 @@
 		<section class="restau">
 			<h2>Restaurants</h2>
 			<article class="cart">
-				<img src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="table de restaurant">
-				<h3>La palette du goût</h3>
-				<i class="fa-regular fa-heart"></i>
-				<i class="fa-solid fa-heart"></i>
-				<span class="nouveau-menu">Nouveau</span>
-				<p>Ménilmontant</p>
+				<a href="">
+					<img src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="table de restaurant">
+					<h3>La palette du goût</h3>
+					<i class="fa-regular fa-heart"></i>
+					<i class="fa-solid fa-heart"></i>
+					<span class="nouveau-menu">Nouveau</span>
+					<p>Ménilmontant</p>
+				</a>
 			</article>
 			<article class="cart">
-				<img src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="table de restaurant">
-				<h3>La note enchantée</h3>
-				<i class="fa-regular fa-heart"></i>
-				<i class="fa-solid fa-heart"></i>
-				<span class="nouveau-menu">Nouveau</span>
-				<p>Charonne</p>
+				<a href="">
+					<img src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="table de restaurant">
+					<h3>La note enchantée</h3>
+					<i class="fa-regular fa-heart"></i>
+					<i class="fa-solid fa-heart"></i>
+					<span class="nouveau-menu">Nouveau</span>
+					<p>Charonne</p>
+				</a>
 			</article>
 			<article class="cart">
-				<img src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="table de restaurant">
-				<h3>À la française</h3>
-				<i class="fa-regular fa-heart"></i>
-				<i class="fa-solid fa-heart"></i>
-				<p>Cité Rouge</p>
+				<a href="">
+					<img src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="table de restaurant">
+					<h3>À la française</h3>
+					<i class="fa-regular fa-heart"></i>
+					<i class="fa-solid fa-heart"></i>
+					<p>Cité Rouge</p>
+				</a>
 			</article>
 			<article class="cart">
-				<img src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="table de restaurant">
-				<h3>Le délice des sens</h3>
-				<i class="fa-regular fa-heart"></i>
-				<i class="fa-solid fa-heart"></i>
-				<p>Folie-Méricourt</p>
+				<a href="#">
+					<img src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="table de restaurant">
+					<h3>Le délice des sens</h3>
+					<i class="fa-regular fa-heart"></i>
+					<i class="fa-solid fa-heart"></i>
+					<p>Folie-Méricourt</p>
+				</a>
 			</article>
 		</section>
 	</main>
@@ -111,15 +127,19 @@
 			
 		<p>
 			<i class="fa-solid fa-utensils"></i>
-			Proposer un restaurant
+			<a href="">Proposer un restaurant</a>
 		</p>
 			
 		<p>
 			<i class="fa-solid fa-handshake"></i>
-			Devenir partenaire
+			<a href="#">Devenir partenaire</a>
 		</p>
-		<p>Mention légales</p>
-		<p>Contact</p>
+		<p>
+			<a href="#">Mention légales</a>
+		</p>	
+		<p>
+			<a href="mailto:dohk53@yahoo.fr" >Contact</a>
+		</p>
 	</footer>			
 </body>
 </html>
