Ajout du fichier menilmontant.html et du fichier menilmontant.css, réalisation du menuLa palette du goût

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 		<section class="restau">
 			<h2>Restaurants</h2>
 			<article class="cart">
-				<a href="">
+				<a href="menilmontant.html">
 					<img src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="table de restaurant">
 					<h3>La palette du goût</h3>
 					<i class="fa-regular fa-heart"></i>
