--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="https://kit.fontawesome.com/671bf4c372.js" crossorigin="anonymous"></script>
-	<link rel="stylesheet" type="text/css" href="css/style.css" media="screen">
-	<link rel="stylesheet" type="text/css" href="css/tablet.css" media=" screen and (max-width: 971px)">
-	<link rel="stylesheet" type="text/css" href="css/smartphone.css" media=" screen and (max-width: 768px)"> 
+	<link rel="stylesheet" type="text/css" href="css/mobile-first.css">
+	<link rel="stylesheet" type="text/css" href="css/tablet.css" media=" screen and (min-width: 768px)"> 
+	<link rel="stylesheet" type="text/css" href="css/desktop.css" media=" screen and (min-width: 971px)"> 
+	
+	
 	<title>Ohmyfood</title>
 </head>
 <body>
