--- a/menu_La-palette-du-goût.html
+++ b/menu_La-palette-du-goût.html
@@ -44,37 +44,49 @@
 				<h3>ENTREES</h3>
 					<article>
 						<div>
-							<h4>Fricassée d'escargot</h4>
-							<p>Au pimet d'espelette</p>
+							<a href="">
+								<h4>Fricassée d'escargot</h4>
+								<p>Au pimet d'espelette</p>
+							</a>
 						</div>
 						<div class="menu-prix">25€</div>
-						<div class="check">
-							<i class="fa-solid fa-circle-check"></i>
-						</di>
+						<a href="">
+							<div class="check">
+								<i class="fa-solid fa-circle-check"></i>
+							</div>
+						</a>
 					</article>
 					
 
 					<article>
 						<div>
-							<h4>Foie gras de carnard mi-cit</h4>
-							<p>Et ses copeaux de truffe noire</p>
+							<a href="">
+								<h4>Foie gras de carnard mi-cit</h4>
+								<p>Et ses copeaux de truffe noire</p>
+							</a>
 						</div>
 						<div class="menu-prix">35€</div>
-						<div class="check">
-							<i class="fa-solid fa-circle-check"></i>
-						</div>
+						<a href="">
+							<div class="check">
+								<i class="fa-solid fa-circle-check"></i>
+							</div>
+						</a>
 					</article>
 					
 
 					<article>
 						<div>
-							<h4>Oeuf au plat</h4>
-							<p>Assaisonné à la truffe sur lit de...</p>
+							<a href="">
+								<h4>Oeuf au plat</h4>
+								<p>Assaisonné à la truffe sur lit de...</p>
+							</a>
 						</div>
 						<div class="menu-prix">20€</div>
-						<div class="check">
-							<i class="fa-solid fa-circle-check"></i>
-						</div>
+						<a href="">
+							<div class="check">
+								<i class="fa-solid fa-circle-check"></i>
+							</div>
+						</a>
 					</article>
 			</section>
 
@@ -86,35 +98,47 @@
 				<h3>PLATS</h3>
 					<article>
 						<div>
-							<h4>Filet de" boeuf aux herbe</h4>
-							<p>Accompagnéde sa ribambelle de légume</p>
+							<a href="">
+								<h4>Filet de" boeuf aux herbe</h4>
+								<p>Accompagnéde sa ribambelle de légu...</p>
+							</a>
 						</div>
 						<div class="menu-prix">40€</div>
-						<div class="check">
-							<i class="fa-solid fa-circle-check"></i>
-						</div>
+						<a href="">
+							<div class="check">
+								<i class="fa-solid fa-circle-check"></i>
+							</div>
+						</a>
 					</article>
 
 					<article>
 						<div>
-							<h4>Permentier de queue de boeuf</h4>
-							<p>À la truffe noire sur sa purée de panais</p>
+							<a href="">
+								<h4>Permentier de queue de boeuf</h4>
+								<p>À la truffe noire sur sa purée de panais</p>
+							</a>
 						</div>
 						<div class="menu-prix">35€</div>
-						<div class="check">
-							<i class="fa-solid fa-circle-check"></i>
-						</div>
+						<a href="">
+							<div class="check">
+								<i class="fa-solid fa-circle-check"></i>
+							</div>
+						</a>
 					</article>
 
 					<article>
 						<div>
-							<h4>Filet deu Turbo</h4>
-							<p>Aux agrumes</p>
+							<a href="">
+								<h4>Filet deu Turbo</h4>
+								<p>Aux agrumes</p>
+							</a>
 						</div>
 						<div class="menu-prix">44€</div>
-						<div class="check">
-							<i class="fa-solid fa-circle-check"></i>
-						</div>
+						<a href="">
+							<div class="check">
+								<i class="fa-solid fa-circle-check"></i>
+							</div>
+						</a>
 					</article>
 			</section>
 
@@ -126,40 +150,50 @@
 				<h3>DESSERTS</h3>
 					<article>
 						<div>
-							<h4>Paris-Brest</h4>
-							<p>Revisté</p>
+							<a href="">
+								<h4>Paris-Brest</h4>
+								<p>Revisté</p>
+							</a>
 						</div>
 						<div class="menu-prix">18€</div>
-						<div class="check">
-							<i class="fa-solid fa-circle-check"></i>
-						</div>
+						<a href="">
+							<div class="check">
+								<i class="fa-solid fa-circle-check"></i>
+							</div>
+						</a>
 					</article>
 
 					<article>
 						<div>
-							<h4>Macaron au chocolat d'exception</h4>
-							<p>Et glace a la vanillee de Madagascar</p>
+							<a href="">
+								<h4>Macaron au chocolat d'exception</h4>
+								<p>Et glace a la vanillee de Madagascar</p>
+							</a>
 						</div>
 						<div class="menu-prix">22€</div>
-						<div class="check">
-							<i class="fa-solid fa-circle-check"></i>
-						</div>
+						<a href="">
+							<div class="check">
+								<i class="fa-solid fa-circle-check"></i>
+							</div>
+						</a>
 					</article>
 
 					<article>
 						<div>
-							<h4>Mousse au chocolat</h4>
-							<p>Au piment d'espelette et à la truffe noir</p>
+							<a href="">
+								<h4>Mousse au chocolat</h4>
+								<p>Au piment d'espelette et à la truffe noir</p>
+							</a>
 						</div>
 						<div class="menu-prix">23€</div>
-						<div class="check">
-							<i class="fa-solid fa-circle-check"></i>
-						</div>
+						<a href="">
+							<div class="check">
+								<i class="fa-solid fa-circle-check"></i>
+							</div>
+						</a>
 					</article>
+						<button>Commander</button>
 			</section>
-			<a href="#">	
-				<button>Commander</button>
-			</a>
 		</div>				
 	</main>
 </body>
