Fin de réalisation du menu la palette du goût. Ajout de 2 nouveaux fichier, le fichier menu_La-noted-encheté.html et du fichier menu_La-noted-enchanté.css. fin de réalisation du menu la nonte enchanté.

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 		<section class="restau">
 			<h2>Restaurants</h2>
 			<article class="cart">
-				<a href="menilmontant.html">
+				<a href="menu_La-palette-du-goût.html">
 					<img src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="table de restaurant">
 					<h3>La palette du goût</h3>
 					<i class="fa-regular fa-heart"></i>
@@ -90,7 +90,7 @@
 				</a>
 			</article>
 			<article class="cart">
-				<a href="">
+				<a href="menu_La-noted-enchanté.html">
 					<img src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="table de restaurant">
 					<h3>La note enchantée</h3>
 					<i class="fa-regular fa-heart"></i>
