--- a/menu_La-noted-enchanté.html
+++ b/menu_La-noted-enchanté.html
@@ -4,10 +4,10 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="https://kit.fontawesome.com/671bf4c372.js" crossorigin="anonymous"></script>
-	<link rel="stylesheet" type="text/css" href="css/menu_La-palette-du-goût.css">
-	<link rel="stylesheet" type="text/css" href="css/menu_La-palette-du-goût-tablet.css" media=" screen and (min-width: 768px)">
-	<link rel="stylesheet" type="text/css" href="css/menu_La-palette-du-goût-desktop.css" media=" screen and (min-width: 971px)"> 
-	<title>la palette du goût</title>
+	<link rel="stylesheet" type="text/css" href="css/menu_La-noted-enchanté.css">
+	<link rel="stylesheet" type="text/css" href="css/menu_La-noted-enchanté-tablet.css" media=" screen and (min-width: 768px)">
+	<link rel="stylesheet" type="text/css" href="css/menu_La-noted-enchanté-desktop.css" media=" screen and (min-width: 971px)"> 
+	<title>La note enchanté</title>
 </head>
 <body>
 
@@ -29,10 +29,10 @@
 						<!-- image de fond -->
 
 		<div class="image-de-fond">
-			<img src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="table de restaurant">
+			<img src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="table de restaurant">
 		</div>
 		<div class="menu">
-			<h2>La palette du goût</h2>
+			<h2>La note enchantée</h2>
 			<i class="fa-regular fa-heart"></i>
 			<i class="fa-solid fa-heart"></i>
 
@@ -45,8 +45,8 @@
 					<article class="animation-1">
 						<div>
 							<a href="">
-								<h4>Fricassée d'escargot</h4>
-								<p>Au pimet d'espelette</p>
+								<h4>Raviles de foie gras</h4>
+								<p>Accompagnés de leur crème à la truffe</p>
 							</a>
 						</div>
 						<div class="menu-prix">25€</div>
@@ -61,8 +61,8 @@
 					<article class="animation-2">
 						<div>
 							<a href="">
-								<h4>Foie gras de carnard mi-cit</h4>
-								<p>Et ses copeaux de truffe noire</p>
+								<h4>Caviar osciètre</h4>
+								<p>Sur blini à la farine de blé noir</p>
 							</a>
 						</div>
 						<div class="menu-prix">35€</div>
@@ -77,11 +77,27 @@
 					<article class="animation-3">
 						<div>
 							<a href="">
-								<h4>Oeuf au plat</h4>
-								<p>Assaisonné à la truffe sur lit de caviar</p>
+								<h4>Homard et espuma de...</h4>
+								<p>Mariné aux zests d'orange</p>
 							</a>
 						</div>
 						<div class="menu-prix">20€</div>
+						<a href="">
+							<div class="check">
+								<i class="fa-solid fa-circle-check"></i>
+							</div>
+						</a>
+					</article>
+
+
+					<article class="animation-4">
+						<div>
+							<a href="">
+								<h4>Foie gras de canard cuit entier</h4>
+								<p>Confiture de figue et pain toasté</p>
+							</a>
+						</div>
+						<div class="menu-prix">35€</div>
 						<a href="">
 							<div class="check">
 								<i class="fa-solid fa-circle-check"></i>
@@ -96,11 +112,11 @@
 
 			<section class="choix-du-menu">
 				<h3>PLATS</h3>
-					<article class="animation-4">
+					<article class="animation-5">
 						<div>
 							<a href="">
-								<h4>Filet de" boeuf aux herbe</h4>
-								<p>Accompagnéde sa ribambelle de légume</p>
+								<h4>Noix de coquilles Saint-Jacques</h4>
+								<p>Sur lit de purée de celeri-rave</p>
 							</a>
 						</div>
 						<div class="menu-prix">40€</div>
@@ -111,11 +127,11 @@
 						</a>
 					</article>
 
-					<article class="animation-5">
+					<article class="animation-6">
 						<div>
 							<a href="">
-								<h4>Permentier de queue de boeuf</h4>
-								<p>À la truffe noire sur sa purée de panais</p>
+								<h4>Langoustine poêlée</h4>
+								<p>Purée de patat douce</p>
 							</a>
 						</div>
 						<div class="menu-prix">35€</div>
@@ -126,11 +142,11 @@
 						</a>
 					</article>
 
-					<article class="animation-6">
+					<article class="animation-7">
 						<div>
 							<a href="">
-								<h4>Filet deu Turbo</h4>
-								<p>Aux agrumes</p>
+								<h4>Mijoté de queue de boeuf</h4>
+								<p>Et riz sauvage aux zestes de citron</p>
 							</a>
 						</div>
 						<div class="menu-prix">44€</div>
@@ -148,11 +164,11 @@
 
 			<section class="choix-du-menu">
 				<h3>DESSERTS</h3>
-					<article class="animation-7">
+					<article class="animation-8">
 						<div>
 							<a href="">
-								<h4>Paris-Brest</h4>
-								<p>Revisté</p>
+								<h4>Macaron noisette et chocolat</h4>
+								<p>Glace au caramel brun et sel de guérande</p>
 							</a>
 						</div>
 						<div class="menu-prix">18€</div>
@@ -163,11 +179,11 @@
 						</a>
 					</article>
 
-					<article class="animation-8">
+					<article class="animation-9">
 						<div>
 							<a href="">
-								<h4>Macaron au chocolat d'exception</h4>
-								<p>Et glace a la vanillee de Madagascar</p>
+								<h4>Baba au rhum revisité</h4>
+								<p>Avec son coulis de citron</p>
 							</a>
 						</div>
 						<div class="menu-prix">22€</div>
@@ -178,11 +194,11 @@
 						</a>
 					</article>
 
-					<article class="animation-9">
+					<article class="animation-10">
 						<div>
 							<a href="">
-								<h4>Mousse au chocolat</h4>
-								<p>Au piment d'espelette et à la truffe noir</p>
+								<h4>Tarte au citron meringuée</h4>
+								<p>Destructurée</p>
 							</a>
 						</div>
 						<div class="menu-prix">23€</div>
