--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 			</article>
 			<article class="cart">
 				<a href="menu_La-noted-enchanté.html">
-					<img src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="table de restaurant">
+					<img src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="table de restaurant">
 					<h3>La note enchantée</h3>
 					<i class="fa-regular fa-heart"></i>
 					<i class="fa-solid fa-heart"></i>
@@ -100,8 +100,8 @@
 				</a>
 			</article>
 			<article class="cart">
-				<a href="">
-					<img src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="table de restaurant">
+				<a href="menu_à-la-française.html">
+					<img src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="table de restaurant">
 					<h3>À la française</h3>
 					<i class="fa-regular fa-heart"></i>
 					<i class="fa-solid fa-heart"></i>
