--- a/menu_à-la-française.html
+++ b/menu_à-la-française.html
@@ -4,10 +4,10 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="https://kit.fontawesome.com/671bf4c372.js" crossorigin="anonymous"></script>
-	<link rel="stylesheet" type="text/css" href="css/menu_La-noted-enchanté.css">
-	<link rel="stylesheet" type="text/css" href="css/menu_La-noted-enchanté-tablet.css" media=" screen and (min-width: 768px)">
-	<link rel="stylesheet" type="text/css" href="css/menu_La-noted-enchanté-desktop.css" media=" screen and (min-width: 971px)"> 
-	<title>La note enchanté</title>
+	<link rel="stylesheet" type="text/css" href="css/menu_à-la-française.css">
+	<link rel="stylesheet" type="text/css" href="css/menu_à-la-française-tablet.css" media=" screen and (min-width: 768px)">
+	<link rel="stylesheet" type="text/css" href="css/menu_à-la-française-desktop.css" media=" screen and (min-width: 971px)"> 
+	<title>à la française</title>
 </head>
 <body>
 
@@ -29,10 +29,10 @@
 						<!-- image de fond -->
 
 		<div class="image-de-fond">
-			<img src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="table de restaurant">
+			<img src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="table de restaurant">
 		</div>
 		<div class="menu">
-			<h2>La note enchantée</h2>
+			<h2>À la française</h2>
 			<i class="fa-regular fa-heart"></i>
 			<i class="fa-solid fa-heart"></i>
 
@@ -45,8 +45,8 @@
 					<article class="animation-1">
 						<div>
 							<a href="">
-								<h4>Raviles de foie gras</h4>
-								<p>Accompagnés de leur crème à la truffe</p>
+								<h4>tartare de poulpe acidulé</h4>
+								<p>Aux zests d'orange</p>
 							</a>
 						</div>
 						<div class="menu-prix">25€</div>
@@ -61,8 +61,8 @@
 					<article class="animation-2">
 						<div>
 							<a href="">
-								<h4>Caviar osciètre</h4>
-								<p>Sur blini à la farine de blé noir</p>
+								<h4>Velouté de légumes d'antan</h4>
+								<p>Carotte, panais, topinambour</p>
 							</a>
 						</div>
 						<div class="menu-prix">35€</div>
@@ -77,27 +77,11 @@
 					<article class="animation-3">
 						<div>
 							<a href="">
-								<h4>Homard et espuma de...</h4>
-								<p>Mariné aux zests d'orange</p>
+								<h4>Soupe à l'oignon</h4>
+								<p>Revisitée</p>
 							</a>
 						</div>
 						<div class="menu-prix">20€</div>
-						<a href="">
-							<div class="check">
-								<i class="fa-solid fa-circle-check"></i>
-							</div>
-						</a>
-					</article>
-
-
-					<article class="animation-4">
-						<div>
-							<a href="">
-								<h4>Foie gras de canard cuit entier</h4>
-								<p>Confiture de figue et pain toasté</p>
-							</a>
-						</div>
-						<div class="menu-prix">35€</div>
 						<a href="">
 							<div class="check">
 								<i class="fa-solid fa-circle-check"></i>
@@ -112,11 +96,11 @@
 
 			<section class="choix-du-menu">
 				<h3>PLATS</h3>
-					<article class="animation-5">
+					<article class="animation-4">
 						<div>
 							<a href="">
-								<h4>Noix de coquilles Saint-Jacques</h4>
-								<p>Sur lit de purée de celeri-rave</p>
+								<h4>Coquilles Saint-Jacques</h4>
+								<p>Accompagnées d'une purée de panais</p>
 							</a>
 						</div>
 						<div class="menu-prix">40€</div>
@@ -127,11 +111,11 @@
 						</a>
 					</article>
 
-					<article class="animation-6">
+					<article class="animation-5">
 						<div>
 							<a href="">
-								<h4>Langoustine poêlée</h4>
-								<p>Purée de patat douce</p>
+								<h4>Magret de canard</h4>
+								<p>Et parmentier de pomme de terres</p>
 							</a>
 						</div>
 						<div class="menu-prix">35€</div>
@@ -142,11 +126,11 @@
 						</a>
 					</article>
 
-					<article class="animation-7">
+					<article class="animation-6">
 						<div>
 							<a href="">
-								<h4>Mijoté de queue de boeuf</h4>
-								<p>Et riz sauvage aux zestes de citron</p>
+								<h4>Pigeonneau d'Ille-et Vilaine</h4>
+								<p>Sur son lit de gnocchis aux légumes</p>
 							</a>
 						</div>
 						<div class="menu-prix">44€</div>
@@ -164,11 +148,11 @@
 
 			<section class="choix-du-menu">
 				<h3>DESSERTS</h3>
-					<article class="animation-8">
+					<article class="animation-7">
 						<div>
 							<a href="">
-								<h4>Macaron noisette et chocolat</h4>
-								<p>Glace au caramel brun et sel de guérande</p>
+								<h4>Pétales de violettes glacés</h4>
+								<p>Purée de noisettes</p>
 							</a>
 						</div>
 						<div class="menu-prix">18€</div>
@@ -179,11 +163,11 @@
 						</a>
 					</article>
 
-					<article class="animation-9">
+					<article class="animation-8">
 						<div>
 							<a href="">
-								<h4>Baba au rhum revisité</h4>
-								<p>Avec son coulis de citron</p>
+								<h4>Fondant au chocolat</h4>
+								<p>Revisité</p>
 							</a>
 						</div>
 						<div class="menu-prix">22€</div>
@@ -194,11 +178,11 @@
 						</a>
 					</article>
 
-					<article class="animation-10">
+					<article class="animation-9">
 						<div>
 							<a href="">
-								<h4>Tarte au citron meringuée</h4>
-								<p>Destructurée</p>
+								<h4>Millefeuille croustillant</h4>
+								<p>myrtilles et pâte d'am</p>
 							</a>
 						</div>
 						<div class="menu-prix">23€</div>
