Ajout de 3 nouvaux fichier, le fichier menu_le-delice-des-sens.html, menu_le-delice-des-sens.css et menu_le-delice-des-sens-desktop.css.fin de realisation du menu le délice des sens.

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 				</a>
 			</article>
 			<article class="cart">
-				<a href="#">
+				<a href="menu_le-delice-des-sens.html">
 					<img src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="table de restaurant">
 					<h3>Le délice des sens</h3>
 					<i class="fa-regular fa-heart"></i>
