--- a/menu_le-delice-des-sens.html
+++ b/menu_le-delice-des-sens.html
@@ -4,10 +4,10 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="https://kit.fontawesome.com/671bf4c372.js" crossorigin="anonymous"></script>
-	<link rel="stylesheet" type="text/css" href="css/menu_à-la-française.css">
-	<link rel="stylesheet" type="text/css" href="css/menu_à-la-française-tablet.css" media=" screen and (min-width: 768px)">
-	<link rel="stylesheet" type="text/css" href="css/menu_à-la-française-desktop.css" media=" screen and (min-width: 971px)"> 
-	<title>à la française</title>
+	<link rel="stylesheet" type="text/css" href="css/menu_le-delice-des-sens.css">
+	<link rel="stylesheet" type="text/css" href="css/menu_le-delice-des-sens-tablet.css" media=" screen and (min-width: 768px)">
+	<link rel="stylesheet" type="text/css" href="css/menu_le-delice-des-sens-desktop.css" media=" screen and (min-width: 971px)"> 
+	<title>le délice des sens</title>
 </head>
 <body>
 
@@ -29,7 +29,7 @@
 						<!-- image de fond -->
 
 		<div class="image-de-fond">
-			<img src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="table de restaurant">
+			<img src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="table de restaurant">
 		</div>
 		<div class="menu">
 			<h2>À la française</h2>
@@ -45,8 +45,8 @@
 					<article class="animation-1">
 						<div>
 							<a href="">
-								<h4>tartare de poulpe acidulé</h4>
-								<p>Aux zests d'orange</p>
+								<h4>tartare de thon</h4>
+								<p>Assaisonné au yuzu</p>
 							</a>
 						</div>
 						<div class="menu-prix">25€</div>
@@ -61,8 +61,8 @@
 					<article class="animation-2">
 						<div>
 							<a href="">
-								<h4>Velouté de légumes d'antan</h4>
-								<p>Carotte, panais, topinambour</p>
+								<h4>Bouchée de homard croustillant</h4>
+								<p>Et sa farandole de petits légumes</p>
 							</a>
 						</div>
 						<div class="menu-prix">35€</div>
@@ -77,8 +77,8 @@
 					<article class="animation-3">
 						<div>
 							<a href="">
-								<h4>Soupe à l'oignon</h4>
-								<p>Revisitée</p>
+								<h4>Velouté de cèpes</h4>
+								<p>Au truffes</p>
 							</a>
 						</div>
 						<div class="menu-prix">20€</div>
@@ -99,8 +99,8 @@
 					<article class="animation-4">
 						<div>
 							<a href="">
-								<h4>Coquilles Saint-Jacques</h4>
-								<p>Accompagnées d'une purée de panais</p>
+								<h4>Poulet rôti aux herbes de provence</h4>
+								<p>Et sa crème de truffe</p>
 							</a>
 						</div>
 						<div class="menu-prix">40€</div>
@@ -114,8 +114,8 @@
 					<article class="animation-5">
 						<div>
 							<a href="">
-								<h4>Magret de canard</h4>
-								<p>Et parmentier de pomme de terres</p>
+								<h4>Langouste rôtie</h4>
+								<p>Et ses légumes de saison</p>
 							</a>
 						</div>
 						<div class="menu-prix">35€</div>
@@ -129,8 +129,8 @@
 					<article class="animation-6">
 						<div>
 							<a href="">
-								<h4>Pigeonneau d'Ille-et Vilaine</h4>
-								<p>Sur son lit de gnocchis aux légumes</p>
+								<h4>Côte de boeuf angus</h4>
+								<p>Et sa purée de panais</p>
 							</a>
 						</div>
 						<div class="menu-prix">44€</div>
@@ -151,8 +151,8 @@
 					<article class="animation-7">
 						<div>
 							<a href="">
-								<h4>Pétales de violettes glacés</h4>
-								<p>Purée de noisettes</p>
+								<h4>Farandole de desserts</h4>
+								<p>du chef</p>
 							</a>
 						</div>
 						<div class="menu-prix">18€</div>
@@ -166,8 +166,8 @@
 					<article class="animation-8">
 						<div>
 							<a href="">
-								<h4>Fondant au chocolat</h4>
-								<p>Revisité</p>
+								<h4>Crème brulée</h4>
+								<p>Revisitée</p>
 							</a>
 						</div>
 						<div class="menu-prix">22€</div>
@@ -181,8 +181,8 @@
 					<article class="animation-9">
 						<div>
 							<a href="">
-								<h4>Millefeuille croustillant</h4>
-								<p>myrtilles et pâte d'amande</p>
+								<h4>Tiramisu</h4>
+								<p>À la noisette</p>
 							</a>
 						</div>
 						<div class="menu-prix">23€</div>
