realisation des menus

--- a/index.html
+++ b/index.html
@@ -38,11 +38,9 @@
 			<p>
 				Découvrez des restaurants d'exception sélectionnés par nos soins
 			</p>
-			<a href="#">
 				<button>
-					explorer nos restaurants
+					Explorer nos restaurants
 				</button>
-			</a>
 		</section>
 
 				<!-- partie fonctionnement -->
@@ -51,27 +49,21 @@
 		<section class="info">
 			<h2>Fonctionnement</h2>
 			<ol>
-				<a href="#">
-					<li>
-						<span>1</span>
-						<i class="fa-solid fa-mobile-screen"></i>
-						Choisissez un restaurant
-					</li>
-				</a>
-				<a href="#">
-					<li>
-						<span>2</span>
-						<i class="fa-solid fa-list-ul"></i>
-						Composez votre menu
-					</li>
-				</a>
-				<a href="#">
-					<li>
-						<span>3</span>
-						<i class="fa-solid fa-store"></i>
-						Dégustez au restaurant
-					</li>
-				</a>
+				<li>
+					<span>1</span>
+					<i class="fa-solid fa-mobile-screen"></i>
+					Choisissez un restaurant
+				</li>
+				<li>
+					<span>2</span>
+					<i class="fa-solid fa-list-ul"></i>
+					Composez votre menu
+				</li>
+				<li>
+					<span>3</span>
+					<i class="fa-solid fa-store"></i>
+					Dégustez au restaurant
+				</li>
 			</ol>
 		</section>
 
@@ -101,7 +93,7 @@
 			</article>
 			<article class="cart">
 				<a href="menu_à-la-française.html">
-					<img src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="table de restaurant">
+					<img src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="table de restaurant à la française">
 					<h3>À la française</h3>
 					<i class="fa-regular fa-heart"></i>
 					<i class="fa-solid fa-heart"></i>
