--- a/menu_La-noted-enchanté.html
+++ b/menu_La-noted-enchanté.html
@@ -4,9 +4,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="https://kit.fontawesome.com/671bf4c372.js" crossorigin="anonymous"></script>
-	<link rel="stylesheet" type="text/css" href="css/menu_La-noted-enchanté.css">
-	<link rel="stylesheet" type="text/css" href="css/menu_La-noted-enchanté-tablet.css" media=" screen and (min-width: 768px)">
-	<link rel="stylesheet" type="text/css" href="css/menu_La-noted-enchanté-desktop.css" media=" screen and (min-width: 971px)"> 
+	<link rel="stylesheet" type="text/css" href="css/menu-mobile.css">
+	<link rel="stylesheet" type="text/css" href="css/menu-desktop.css" media=" screen and (min-width: 971px)"> 
 	<title>La note enchanté</title>
 </head>
 <body>
@@ -208,11 +207,34 @@
 							</div>
 						</a>
 					</article>
-						<button>
-							<a href="#">Commander</a> 
-						</button>
+						<button>Commander</button>
 			</section>
 		</div>				
 	</main>
+
+
+					<!-- footer -->
+
+	
+	<footer>
+		<h2>Ohmyfood</h2>
+			
+		<p>
+			<i class="fa-solid fa-utensils"></i>
+			<a href="">Proposer un restaurant</a>
+		</p>
+			
+		<p>
+			<i class="fa-solid fa-handshake"></i>
+			<a href="#">Devenir partenaire</a>
+		</p>
+		<p>
+			<a href="#">Mention légales</a>
+		</p>	
+		<p>
+			<a href="mailto:dohk53@yahoo.fr" >Contact</a>
+		</p>
+	</footer>
+	
 </body>
 </html>
