--- a/menu_le-delice-des-sens.html
+++ b/menu_le-delice-des-sens.html
@@ -192,11 +192,34 @@
 							</div>
 						</a>
 					</article>
-						<button>
-							<a href="#">Commander</a> 
-						</button>
+						<button>Commander</button>
 			</section>
 		</div>				
 	</main>
+
+
+					<!-- footer -->
+
+	
+	<footer>
+		<h2>Ohmyfood</h2>
+			
+		<p>
+			<i class="fa-solid fa-utensils"></i>
+			<a href="">Proposer un restaurant</a>
+		</p>
+			
+		<p>
+			<i class="fa-solid fa-handshake"></i>
+			<a href="#">Devenir partenaire</a>
+		</p>
+		<p>
+			<a href="#">Mention légales</a>
+		</p>	
+		<p>
+			<a href="mailto:dohk53@yahoo.fr" >Contact</a>
+		</p>
+	</footer>
+	
 </body>
 </html>
