ajout de deux fiechier css, menu-mobile.css et menu-desktop.css renomage des menus html.fin de realisation des animations

--- a/menu_le-delice-des-sens.html
+++ b/menu_le-delice-des-sens.html
@@ -4,9 +4,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="https://kit.fontawesome.com/671bf4c372.js" crossorigin="anonymous"></script>
-	<link rel="stylesheet" type="text/css" href="css/menu_le-delice-des-sens.css">
-	<link rel="stylesheet" type="text/css" href="css/menu_le-delice-des-sens-tablet.css" media=" screen and (min-width: 768px)">
-	<link rel="stylesheet" type="text/css" href="css/menu_le-delice-des-sens-desktop.css" media=" screen and (min-width: 971px)"> 
+	<link rel="stylesheet" type="text/css" href="css/menu-mobile.css">
+	<link rel="stylesheet" type="text/css" href="css/menu-desktop.css" media=" screen and (min-width: 971px)"> 
 	<title>le délice des sens</title>
 </head>
 <body>
