--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 		<section class="restau">
 			<h2>Restaurants</h2>
 			<article class="cart">
-				<a href="menu_La-palette-du-goût.html">
+				<a href="menu_la-palette-du-gout.html">
 					<img src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="table de restaurant">
 					<h3>La palette du goût</h3>
 					<i class="fa-regular fa-heart"></i>
@@ -82,7 +82,7 @@
 				</a>
 			</article>
 			<article class="cart">
-				<a href="menu_La-noted-enchanté.html">
+				<a href="menu_la-note-enchante.html">
 					<img src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="table de restaurant">
 					<h3>La note enchantée</h3>
 					<i class="fa-regular fa-heart"></i>
@@ -92,7 +92,7 @@
 				</a>
 			</article>
 			<article class="cart">
-				<a href="menu_à-la-française.html">
+				<a href="menu_a-la-francaise.html">
 					<img src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="table de restaurant à la française">
 					<h3>À la française</h3>
 					<i class="fa-regular fa-heart"></i>
