--- a/menu_la-palette-du-gout.html
+++ b/menu_la-palette-du-gout.html
@@ -4,9 +4,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="https://kit.fontawesome.com/671bf4c372.js" crossorigin="anonymous"></script>
-	<link rel="stylesheet" type="text/css" href="css/menu_La-palette-du-goût.css">
-	<link rel="stylesheet" type="text/css" href="css/menu_La-palette-du-goût-tablet.css" media=" screen and (min-width: 768px)">
-	<link rel="stylesheet" type="text/css" href="css/menu_La-palette-du-goût-desktop.css" media=" screen and (min-width: 971px)"> 
+	<link rel="stylesheet" type="text/css" href="css/menu-mobile.css">
+	<link rel="stylesheet" type="text/css" href="css/menu-desktop.css" media=" screen and (min-width: 971px)"> 
 	<title>la palette du goût</title>
 </head>
 <body>
