--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
 </head>
 <body>
 
+					<!-- partie chargement -->
+
+
+	<div class="chargement">
+		<i class="fa-solid fa-circle-notch"></i>
+	</div>
+
 					<!-- header -->
 
 	<header>
@@ -82,7 +89,7 @@
 				</a>
 			</article>
 			<article class="cart">
-				<a href="menu_la-note-enchante.html">
+				<a href="menu_la-note-enchantee.html">
 					<img src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="table de restaurant">
 					<h3>La note enchantée</h3>
 					<i class="fa-regular fa-heart"></i>
